<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="40dip"
	    
	    android:background="#cccccc">
	    
	    <!-- android:layout_height="?android:attr/listPreferredItemHeight" -->
	    <!-- android:padding="6dip" -->
	    
	    <Button
	        android:id="@+id/settingsBtn"
	     android:layout_height="fill_parent"
	     android:layout_width="wrap_content"
	     android:text="@string/settings"
	     android:onClick="launchSettings"
	     
	     android:layout_alignParentTop="true"
	     android:layout_alignParentBottom="true"
	     android:layout_marginRight="10dip"
	     android:layout_alignParentRight="true"
	     
	     android:padding="4dip"
	     
	     android:background="@drawable/button_selector"
	     />
	    
	     <Button
	        android:id="@+id/logoutBtn"
	     android:layout_height="fill_parent"
	     android:layout_width="wrap_content"
	     android:text="@string/logout"
	     android:onClick="logout"
	     
	     android:layout_toLeftOf="@id/settingsBtn"
	     
	     android:layout_alignParentTop="true"
	     android:layout_alignParentBottom="true"
	     android:layout_marginRight="10dip"
	     
	     android:padding="10dip"
	     
	     android:background="@drawable/button_selector"
	     />
	    
	     <Button
	        android:id="@+id/username"
	     android:layout_height="fill_parent"
	     android:layout_width="fill_parent"
	     android:text="@string/username"
	     
	     android:layout_toLeftOf="@id/logoutBtn"
	     
	     android:layout_alignParentTop="true"
	     android:layout_alignParentBottom="true"
	     android:layout_marginRight="10dip"
	     
	     android:padding="10dip"
	     
	     android:background="#cccccc"
	     />
	</RelativeLayout>
	<!--  Calorie Count -->
	
	<EditText 
		android:id="@+id/txtAmount" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:numeric="decimal"
		android:layout_column="2"
		android:layout_span="2"
		android:hint="@string/height"
		/>			

	<EditText 
		android:id="@+id/txtPeople" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:numeric="integer"
		android:layout_column="2"
		android:layout_span="3"
		android:hint="@string/weight"
		/>			

	<RadioGroup 
		android:id="@+id/RadioGroupTips"
		android:orientation="horizontal" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_column="0"
		android:layout_span="3"
		android:checkedButton="@+id/radioFifteen">
		<RadioButton android:id="@+id/radioFifteen"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/rdoTxt15"
			android:textSize="15sp" />
		<RadioButton android:id="@+id/radioTwenty"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/rdoTxt20"
			android:textSize="15sp" />
		<RadioButton android:id="@+id/radioOther"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/rdoTxtOther" 
			android:textSize="15sp" />
	</RadioGroup>
	
	<Spinner
    android:id="@+id/SpinnerFeedbackType"
    android:layout_height="wrap_content"
    android:prompt="@string/motiontype"
    android:layout_width="fill_parent"
    android:entries="@array/feedbacktypelist">
	</Spinner>
	
	
		<EditText 
			android:id="@+id/txtTipOther" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:numeric="decimal"/>			
<RelativeLayout android:id="@+id/RelativeLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content">
	<Button 
		android:id="@+id/btnReset" 
		android:layout_alignParentLeft="true"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_column="2"  
		android:text="@string/btnReset"/>
	<Button 
		android:id="@+id/btnCalculate" 
		android:layout_toRightOf="@id/btnReset"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_column="3" 
		android:text="@string/btnCalculate"/>
</RelativeLayout>
	<TextView 
		android:id="@+id/txtLbl4" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_column="0"
		android:text="@string/textLbl4"/>
	<TextView 
		android:id="@+id/txtTipAmount" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:layout_column="2"
		android:layout_span="2"/>			

	<TextView 
		android:id="@+id/txtLbl5" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_column="0"
		android:text="@string/textLbl5"/>
	<TextView 
		android:id="@+id/txtTotalToPay" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:layout_column="2"
		android:layout_span="2"/>			
	
	<TextView 
		android:id="@+id/txtLbl6" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_column="0"
		android:text="@string/textLbl6"/>
	<TextView 
		android:id="@+id/txtTipPerPerson" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:layout_column="2"
		android:layout_span="2"/>			
    
</LinearLayout>