<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="40dip"
	    
	    android:background="#cccccc">
	    
	    <!-- android:layout_height="?android:attr/listPreferredItemHeight" -->
	    <!-- android:padding="6dip" -->
	    
	    <Button
	        android:id="@+id/settingsBtn"
	     android:layout_height="fill_parent"
	     android:layout_width="wrap_content"
	     android:text="@string/settings"
	     android:onClick="launchSettings"
	     
	     android:layout_alignParentTop="true"
	     android:layout_alignParentBottom="true"
	     android:layout_marginRight="10dip"
	     android:layout_alignParentRight="true"
	     
	     android:padding="4dip"
	     
	     android:background="@drawable/button_selector"
	     />
	    
	     <Button
	        android:id="@+id/logoutBtn"
	     android:layout_height="fill_parent"
	     android:layout_width="wrap_content"
	     android:text="@string/logout"
	     android:onClick="logout"
	     
	     android:layout_toLeftOf="@id/settingsBtn"
	     
	     android:layout_alignParentTop="true"
	     android:layout_alignParentBottom="true"
	     android:layout_marginRight="10dip"
	     
	     android:padding="10dip"
	     
	     android:background="@drawable/button_selector"
	     />
	    
	     <Button
	        android:id="@+id/username"
	     android:layout_height="fill_parent"
	     android:layout_width="fill_parent"
	     android:text="@string/username"
	     
	     android:layout_toLeftOf="@id/logoutBtn"
	     
	     android:layout_alignParentTop="true"
	     android:layout_alignParentBottom="true"
	     android:layout_marginRight="10dip"
	     
	     android:padding="10dip"
	     
	     android:background="#cccccc"
	     />
	</RelativeLayout>
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="?android:attr/listPreferredItemHeight"
	    
	    android:padding="6dip">
	    
	    <ImageView
	        android:id="@+id/icon"
	        
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        
	        android:layout_alignParentTop="true"
	        android:layout_alignParentBottom="true"
	        android:layout_marginRight="6dip"
	        
	        android:src="@drawable/icon" />
	
	    <TextView  
	        android:id="@+id/secondLine"
	
	        android:layout_width="fill_parent"
	        android:layout_height="26dip" 
	        
	        android:layout_toRightOf="@id/icon"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentRight="true"
	        
	        android:singleLine="true"
	        android:ellipsize="marquee"
	        android:text="Simple application that shows how to use RelativeLayout" />
	
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        
	        android:layout_toRightOf="@id/icon"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:layout_above="@id/secondLine"
	        android:layout_alignWithParentIfMissing="true"
	                
	        android:gravity="center_vertical"
	        android:text="My Application" />
	
	</RelativeLayout>
</LinearLayout>